--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
-## MAC OS X
+# Project defaults
+node_modules/
+app/components
+
+# OS X defaults
 .DS_Store
+.AppleDouble
+.LSOverride
+Icon
+
+# OS X thumbnails
+._*
+
+# OS X files that might appear on external disk
+.Spotlight-V100
+.Trashes
