--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "angular-loader": "~1.0.7",
     "angular-resource": "~1.0.7",
     "angular-sanitize": "~1.0.7",
-    "requirejs": "~2.1.6"
+    "requirejs": "~2.1.6",
+    "requirejs-text": "~2.0.7"
   }
 }
